--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,11 +12,18 @@
 <body>
     <header>
         <img src="images/logo.png" alt="White Water Rafting Adventures Logo">
+        <h1>White Water Rafting Adventures</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="trips.html">Trips</a>
-            <a href="contact.html">Contact</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">W1</a></li>
+                <li><a href="#">W2</a></li>
+                <li><a href="#">W3</a></li>
+                <li><a href="#">W4</a></li>
+                <li><a href="#">W5</a></li>
+                <li><a href="#">W6</a></li>
+                <li><a href="#">W7</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -30,26 +37,43 @@
             </article>
         </div>
 
-        <section>
+        <section class="history">
             <h2>History</h2>
             <p>Founded in 1995, White Water Rafting Adventures has been guiding thrill-seekers down the most exciting rivers for over 25 years.</p>
         </section>
 
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting 1">
-            <img src="images/rafting2.jpg" alt="Rafting 2">
-            <img src="images/rafting3.jpg" alt="Rafting 3">
-            <img src="images/rafting4.jpg" alt="Rafting 4">
-            <img src="images/rafting5.jpg" alt="Rafting 5">
+            <figure>
+                <img src="images/rafting1.jpg" alt="Los Dientes del Diablo">
+                <figcaption>Los Dientes del Diablo</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting2.jpg" alt="Big Mallard">
+                <figcaption>Big Mallard</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting3.jpg" alt="Half Day Adventure">
+                <figcaption>Half Day Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting4.jpg" alt="Full Day Adventure">
+                <figcaption>Full Day Adventure</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting5.jpg" alt="White Water Extreme">
+                <figcaption>White Water Extreme</figcaption>
+            </figure>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2025 White Water Rafting Adventures | Samuel Rapata</p>
-        <a href="#"><img src="images/facebook-icon.jpg" alt="Follow us on Facebook"></a>
-        <a href="#"><img src="images/instagram-icon.jpg" alt="Follow us on Instagram"></a>
-        <a href="#"><img src="images/twitter-icon.png" alt="Follow us on Twitter"></a>        
+        <div class="socials">
+            <a href="#"><img src="images/facebook-icon.jpg" alt="Follow us on Facebook"></a>
+            <a href="#"><img src="images/instagram-icon.jpg" alt="Follow us on Instagram"></a>
+            <a href="#"><img src="images/twitter-icon.png" alt="Follow us on Twitter"></a>
+        </div>
     </footer>
 </body>
 </html>
